--- a/w1/ASPIntroDemo/Views/Home/Index.cshtml
+++ b/w1/ASPIntroDemo/Views/Home/Index.cshtml
@@ -13,6 +13,8 @@
 
   <h2 class="red">Hello @Model.Tourist.FullName()</h2>
 
+  <p>Message: @ViewBag.Message</p>
+
   <ul>
     @foreach (Destination destination in Model.TravelDestinations)
     {
