--- a/w1/ASPIntroDemo/Views/Home/Destination.cshtml
+++ b/w1/ASPIntroDemo/Views/Home/Destination.cshtml
@@ -8,6 +8,9 @@
   <title>Document</title>
 </head>
 <body>
+  <div>
+    <a href="/">Home</a>
+  </div>
   <h2>Welcome! You have virtually travelled to @Model.Name</h2>
 
   <img src="@Model.ImgUrl" alt="@Model.Name">
