--- a/w1/ASPIntroDemo/Views/Home/Register.cshtml
+++ b/w1/ASPIntroDemo/Views/Home/Register.cshtml
@@ -1,6 +1,6 @@
 @model User;
 
-  <h2>New User</h2>
+  <h2>Guest User</h2>
   <form action="/register/process" method="POST">
     <div class="form-group">
       <label>First Name</label>
