--- a/w1/ASPIntroDemo/Views/Home/Destination.cshtml
+++ b/w1/ASPIntroDemo/Views/Home/Destination.cshtml
@@ -11,8 +11,8 @@
   <div>
     <a href="/">Home</a>
   </div>
-  <h2>Welcome! You have virtually travelled to @Model.Name</h2>
-
+  <p>@TempData["FirstName"]</p>
+  <h2>You have virtually traveled to @Model.Name</h2>
   <img src="@Model.ImgUrl" alt="@Model.Name">
 </body>
 </html>
