--- a/w1/ASPIntroDemo/Views/Home/Index.cshtml
+++ b/w1/ASPIntroDemo/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-@model HomePage;
+@model User;
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,24 +9,22 @@
   <link rel="stylesheet" href="~/style.css">
 </head>
 <body>
-  <h1 class="red">Hello @Model.Tourist.FirstName @Model.Tourist.LastName</h1>
 
-  <h2 class="red">Hello @Model.Tourist.FullName()</h2>
+  <h1 class="red">@ViewBag.Introduction</h1>
+  <h3>Greetings, what is your name traveller?</h3>
 
-  <p>Message: @ViewBag.Message</p>
+  <form action="/guide" method="POST">
+    <div class="form-group">
+      <label>First Name</label>
+      <input class="form-control" type="text" name="FirstName" />
+    </div>
 
-  <ul>
-    @foreach (Destination destination in Model.TravelDestinations)
-    {
-      <li>
-        <a href="/travel/@destination.Name">@destination.Name</a>
-      </li>
-    }
-  </ul>
-
-  <div>
-    <a href="/register">Register</a>
-  </div>
+    <div class="form-group">
+      <label>Last Name</label>
+      <input class="form-control" type="text" name="LastName" />
+    </div>
+    <input type="submit" value="Please Guide Me On A Journey!" />
+  </form>
 
 </body>
 </html>
