entity framework intro

--- a/w2/ForumDemo/Views/Posts/All.cshtml
+++ b/w2/ForumDemo/Views/Posts/All.cshtml
@@ -1,25 +1,28 @@
-@model List<Dictionary<string, object>>;
+@model List<Post>;
 
 <h2 class="text-center">All Posts</h2>
 
-@foreach (Dictionary<string, object> postDict in Model)
+@foreach (Post post in Model)
 {
     <div class="card mx-auto text-center mb-3 w-50">
       <div class="card-header">
         <h5 class="card-title">
-          @postDict["Topic"]
+          @post.Topic
         </h5>
       </div>
 
       <div class="card-body">
         <h6 class="card-subtitle mb-2 text-muted">
-          @postDict["Username"]
+          @post.Username
         </h6>
         <p class="card-text">
-          @postDict["Body"]
+          @post.Body
         </p>
-        <a asp-action="Details" asp-controller="Posts" asp-route-id='@postDict["PostId"]'>Details</a>
-        @* <a href='/Posts/@postDict["PostId"]'>Details</a> *@
+        <a asp-action="Details" asp-controller="Posts" asp-route-postId='@post.PostId'>Details</a>
+        <a class="text-warning" asp-action="Edit" asp-controller="Posts" asp-route-postId='@post.PostId'>Edit</a>
+        <a class="text-danger" href="/Posts/@post.PostId/Delete">Delete</a>
+        @* Example of using href instead of tag helpers *@
+        @* <a href='/Posts/@post.PostId'>Details</a> *@
       </div>
     </div>
 }
