--- a/w2/ForumDemo/Views/Home/Index.cshtml
+++ b/w2/ForumDemo/Views/Home/Index.cshtml
@@ -2,7 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <h1 class="text-center">Welcome</h1>
+    <hr />
+
+    <div class="row mt-5">
+        <div class="col-md">
+            <partial name="_Register"></partial>
+        </div>
+
+        <div class="col-md">
+            <partial name="_Login"></partial>
+        </div>
+    </div>
 </div>
