--- a/w2/ForumDemo/Views/Home/Index.cshtml
+++ b/w2/ForumDemo/Views/Home/Index.cshtml
@@ -1,18 +1,16 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@{ ViewData["Title"] = "Home Page"; }
 
 <div class="container">
-    <h1 class="text-center">Welcome</h1>
-    <hr />
+  <h1 class="text-center">Welcome</h1>
+  <hr />
 
-    <div class="row mt-5">
-        <div class="col-md">
-            <partial name="_Register"></partial>
-        </div>
-
-        <div class="col-md">
-            <partial name="_Login"></partial>
-        </div>
+  <div class="row mt-5">
+    <div class="col-md">
+      <partial name="_Register"></partial>
     </div>
+
+    <div class="col-md">
+      <partial name="_Login"></partial>
+    </div>
+  </div>
 </div>
