--- a/w2/ForumDemo/Views/Posts/AuthorPage.cshtml
+++ b/w2/ForumDemo/Views/Posts/AuthorPage.cshtml
@@ -9,35 +9,32 @@
   </h3>
   <hr>
 
-  <div class="card-deck">
-
-    @foreach (Post post in Model.Posts)
-    {
-        <div class="card text-center">
-          <div class="card-header">
-            <h2>@post.Topic</h2>
-          </div>
-
-          <div class="card-body">
-            <p class="card-text">
-              @post.Body
-            </p>
-          </div>
-          <p class="card-text">
-            <small class="text-muted">
-              @post.CreatedAt
-            </small>
-          </p>
-          <small class="text-muted">
-            <a
-              asp-controller="Posts"
-              asp-action="Details"
-              asp-route-id="@post.PostId"
-            >
-              Details
-            </a>
-          </small>
+  @foreach (Post post in Model.Posts)
+  {
+      <div class="card mb-3 text-center w-50 mx-auto">
+        <div class="card-header">
+          <h2>@post.Topic</h2>
         </div>
-    }
-  </div>
+
+        <div class="card-body">
+          <p class="card-text">
+            @post.Body
+          </p>
+        </div>
+        <p class="card-text">
+          <small class="text-muted">
+            @post.CreatedAt
+          </small>
+        </p>
+        <small class="text-muted">
+          <a
+            asp-controller="Posts"
+            asp-action="Details"
+            asp-route-id="@post.PostId"
+          >
+            Details
+          </a>
+        </small>
+      </div>
+  }
 </div>
