--- a/w2/ForumDemo/Views/Posts/Details.cshtml
+++ b/w2/ForumDemo/Views/Posts/Details.cshtml
@@ -5,7 +5,7 @@
   <hr />
 
   <h2>Author</h2>
-  <h5>@Model.Author.FullName()</h5>
+  <h5>By @Model.Author.FullName() on @Model.CreatedAt</h5>
   <hr />
 
   <h2>Topic</h2>
@@ -14,4 +14,5 @@
 
   <h2>Post</h2>
   <p>@Model.Body</p>
+
 </div>
