--- a/ForumDemo/Views/Posts/Details.cshtml
+++ b/ForumDemo/Views/Posts/Details.cshtml
@@ -1,5 +1,10 @@
 @model Post
 
+@{
+  IEnumerable<Vote> upvotes = Model.Votes.Where(vote => vote.IsUpvote == true);
+  IEnumerable<Vote> downvotes = Model.Votes.Where(vote => vote.IsUpvote == false);
+}
+
 <div class="container">
   <h1>Details for Post Id #@Model.PostId</h1>
   <hr />
@@ -14,5 +19,14 @@
 
   <h2>Post</h2>
   <p>@Model.Body</p>
+  <p>
+    Up Votes: (@upvotes.ToList().Count)
+    @String.Join(", ", upvotes.Select(vote => vote.Voter.FirstName).ToList())
+  </p>
+  
+  <p>
+    Down Votes: (@downvotes.ToList().Count)
+    @String.Join(", ", downvotes.Select(vote => vote.Voter.FirstName).ToList())
+  </p>
 
 </div>
