--- a/ForumDemo/Views/Shared/_Layout.cshtml
+++ b/ForumDemo/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    @* MUST ADD LINE TO _ViewImports to be able to access session from view *@
+    @* MUST ADD LINE EXTRA CODE TO _ViewImports to be able to access session from view *@
     int? userId = Context.Session.GetInt32("UserId");
 }
 
