--- a/ForumDemo/Views/Posts/All.cshtml
+++ b/ForumDemo/Views/Posts/All.cshtml
@@ -1,7 +1,7 @@
 @model List<Post>
 
 @{
-  @* MUST ADD LINE TO _ViewImports to be able to access session from view *@
+  @* MUST ADD LINE EXTRA CODE TO _ViewImports to be able to access session from view *@
   @* Otherwise, need to put the logged in user id in ViewBag *@
   int loggedInUserId = (int)Context.Session.GetInt32("UserId");
 }
