--- a/ForumDemo/Views/Posts/Details.cshtml
+++ b/ForumDemo/Views/Posts/Details.cshtml
@@ -21,7 +21,7 @@
   <p>@Model.Body</p>
   <p>
     Up Votes: (@upvotes.ToList().Count)
-    @String.Join(", ", upvotes.Select(vote => vote.Voter.FirstName + " " + vote.Voter.LastName).ToList())
+    @String.Join(", ", upvotes.Select(vote => vote.Voter.FullName()).ToList())
   </p>
   
   <p>
