--- a/BeltPrep/FoodTrucks/Views/_ViewImports.cshtml
+++ b/BeltPrep/FoodTrucks/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using FoodTrucks
 @using FoodTrucks.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@* needed to directly access session in views *@
+@using Microsoft.AspNetCore.Http 
