--- a/BeltPrep/FoodTrucks/Views/FoodTrucks/Dashboard.cshtml
+++ b/BeltPrep/FoodTrucks/Views/FoodTrucks/Dashboard.cshtml
@@ -1,13 +1,1 @@
-<ul class="nav">
-  <li class="nav-item border">
-    <a asp-controller="FoodTrucks" asp-action="Dashboard" class="nav-link disabled">
-    Dashboard
-  </a>
-  </li>
-  <li class="nav-item border">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item border">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-</ul>
+<partial name="_DashboardLinks"></partial>
