--- a/BeltPrep/FoodTrucks/Views/Shared/_Layout.cshtml
+++ b/BeltPrep/FoodTrucks/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{
+    string LoggedInFullName = Context.Session.GetString("FirstName");
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -21,26 +25,24 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FoodTrucks</a>
+                <h1>
+                    <a class="navbar-brand d-inline-block" asp-area="" asp-controller="Home" asp-action="Index">FoodTrucks</a>
+                </h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <form asp-controller="Home" asp-action="Logout" method="POST">
-                                <button class="btn btn-link">
-                                    Logout (@Context.Session.GetString("FirstName"))
-                                </button>
-                            </form>
-                        </li>
+                        @if (LoggedInFullName != null) {
+                            <li class="nav-item">
+                                <form asp-controller="Home" asp-action="Logout" method="POST">
+                                    <button class="btn btn-link">
+                                        Logout (@LoggedInFullName)
+                                    </button>
+                                </form>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
