--- a/BeltPrep/FoodTrucks/Views/Home/_Login.cshtml
+++ b/BeltPrep/FoodTrucks/Views/Home/_Login.cshtml
@@ -11,7 +11,7 @@
       class="text-danger font-weight-bold"
       asp-validation-for="LoginEmail"
     ></span>
-    <input asp-for="LoginEmail" class="form-control" />
+    <input asp-for="LoginEmail" class="form-control" value="n@m" />
   </div>
 
   <div class="form-group">
