--- a/BeltPrep/FoodTrucks/Views/FoodTrucks/Dashboard.cshtml
+++ b/BeltPrep/FoodTrucks/Views/FoodTrucks/Dashboard.cshtml
@@ -1,1 +1,45 @@
+@model List<FoodTruck>
+
+@{
+  int? loggedInUserId = Context.Session.GetInt32("UserId");
+}
+
 <partial name="_DashboardLinks"></partial>
+
+<div class="container mt-5">
+  @foreach (FoodTruck truck in Model)
+  {
+      <div class="row bg-secondary border mt-2 mb-2 p-3">
+        <div class="col-md-3">
+          <img src="https://image.flaticon.com/icons/png/512/45/45880.png" alt="Delivery Truck" width="100">
+        </div>
+        <div class="col-md-6">
+          <h3>
+            @truck.Name
+          </h3>
+          <p>
+            @truck.Style
+          </p>
+          <p>
+            Average Rating: 
+          </p>
+        </div>
+        <div class="col-md-3 text-right">
+          @* asp-route-foodTruckId is adding a route parameter. After the last hyphen needs to match the param name in the controller *@
+
+          @if (loggedInUserId == truck.UserId){
+            <a
+              asp-controller="FoodTrucks"
+              asp-action="Edit" class="btn btn-primary"
+              asp-route-foodTruckId="@truck.FoodTruckId"
+            >
+              edit
+            </a>
+          }
+          <a asp-controller="FoodTrucks" asp-action="Details" class="btn btn-success">
+            review
+          </a>
+        </div>
+      </div>
+  }
+</div>
