--- a/BeltPrep/FoodTrucks/Views/FoodTrucks/Dashboard.cshtml
+++ b/BeltPrep/FoodTrucks/Views/FoodTrucks/Dashboard.cshtml
@@ -30,13 +30,19 @@
           @if (loggedInUserId == truck.UserId){
             <a
               asp-controller="FoodTrucks"
-              asp-action="Edit" class="btn btn-primary"
+              asp-action="Edit"
               asp-route-foodTruckId="@truck.FoodTruckId"
+              class="btn btn-primary"
             >
               edit
             </a>
           }
-          <a asp-controller="FoodTrucks" asp-action="Details" class="btn btn-success">
+          <a 
+            asp-controller="FoodTrucks" 
+            asp-action="Details" 
+            asp-route-foodTruckId="@truck.FoodTruckId"
+            class="btn btn-success"
+          >
             review
           </a>
         </div>
