--- a/week1/TravelGuide/Views/Home/Guide2.cshtml
+++ b/week1/TravelGuide/Views/Home/Guide2.cshtml
@@ -12,7 +12,7 @@
   <h2>Greetings @Model.Traveler.FirstName @Model.Traveler.LastName. Where would you like to travel to?</h2>
 
   <ul>
-    @foreach (Destination destination in Model.TravelDestinations)
+    @foreach (Destination destination in Model.Destinations)
     {   
         @* since we are inside a code block we can write C# code *@
         string test = "test";
