--- a/week1/TravelGuide/Views/Home/Index.cshtml
+++ b/week1/TravelGuide/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 <body>
   <h1 id="test">@ViewBag.Introduction</h1>
   <img src="@ViewBag.ImgUrl" alt="Are You Ready For Your Quest">
-  <p>Travel guid created in @ViewBag.YearCreated</p>
+  <p>Travel guide created in @ViewBag.YearCreated</p>
 
   <h3>Greetings, what is your name traveller?</h3>
 
