--- a/week2/ForumDemo/Views/Posts/Edit.cshtml
+++ b/week2/ForumDemo/Views/Posts/Edit.cshtml
@@ -8,10 +8,8 @@
   asp-action="Update"
   asp-controller="Posts"
   asp-route-id="@Model.PostId"
+  method="POST"
 >
-  @* don't edit Uesrname *@
-  <input type="hidden" class="form-control" asp-for="Username" />
-
   <div class="form-group">
     <b><label asp-for="Topic"></label></b>
     <span
@@ -30,6 +28,16 @@
     <textarea class="form-control" asp-for="Body">
       @Model.Body
     </textarea>
+  </div>
+
+  <div class="form-group">
+    <label asp-for="ImgUrl"></label>
+    <span
+      class="text-danger font-weight-bold"
+      asp-validation-for="ImgUrl"
+    >
+    </span>
+    <input class="form-control" asp-for="ImgUrl" />
   </div>
 
   <button class="btn btn-success">Save</button>
