--- a/week2/ForumDemo/Views/Posts/New.cshtml
+++ b/week2/ForumDemo/Views/Posts/New.cshtml
@@ -4,16 +4,6 @@
 
 <form asp-action="Create" asp-controller="Posts" method="POST">
   <div class="form-group">
-    <label asp-for="Username"></label>
-    <span
-      class="text-danger font-weight-bold"
-      asp-validation-for="Username"
-    >
-    </span>
-    <input class="form-control" asp-for="Username" />
-  </div>
-
-  <div class="form-group">
     <label asp-for="Topic"></label>
     <span
       class="text-danger font-weight-bold"
@@ -21,6 +11,16 @@
     >
     </span>
     <input class="form-control" asp-for="Topic" />
+  </div>
+
+  <div class="form-group">
+    <label asp-for="ImgUrl"></label>
+    <span
+      class="text-danger font-weight-bold"
+      asp-validation-for="ImgUrl"
+    >
+    </span>
+    <input class="form-control" asp-for="ImgUrl" />
   </div>
 
   <div class="form-group">
