--- a/ForumDemo/Views/Posts/Details.cshtml
+++ b/ForumDemo/Views/Posts/Details.cshtml
@@ -5,6 +5,11 @@
 
 @model Post
 
+@{
+  IEnumerable<Vote> upvotes = Model.Votes.Where(vote => vote.IsUpvote == true);
+  IEnumerable<Vote> downvotes = Model.Votes.Where(vote => vote.IsUpvote == false);
+}
+
 <div class="container">
     <div class="card mx-auto text-center mb-3 w-50">
       <div class="card-header">
@@ -29,6 +34,22 @@
       </div>
 
       <div class="card-footer">
+        <div>
+          <p>@upvotes.ToList().Count Up voters: @String.Join(", ", upvotes.Select(vote => vote.Voter.FullName()))</p>
+          <hr>
+          
+          <p>@downvotes.ToList().Count Down voters: @String.Join(", ", downvotes.Select(vote => vote.Voter.FullName()))</p>
+          <hr>
+          
+          <p>All Voters:</p>
+          @foreach(Vote vote in Model.Votes)
+          {
+            <span>@vote.Voter.FullName(), </span>
+          }
+          
+          <hr>
+        </div>
+        
         @* asp-route-paramName=@paramValue *@
         <a 
           asp-controller="Posts"
