--- a/week3/FoodTruckDemo/Views/Shared/_Layout.cshtml
+++ b/week3/FoodTruckDemo/Views/Shared/_Layout.cshtml
@@ -28,12 +28,25 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" href="#">Contact Us</a>
                         </li>
+
+                        @if (Context.Session.GetInt32("UserId") != null) {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="FoodTruck" asp-action="All">Dashboard</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="FoodTruck" asp-action="New">New Truck</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout (@Context.Session.GetString("FullName"))</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
