--- a/week3/FoodTruckDemo/Views/FoodTruck/All.cshtml
+++ b/week3/FoodTruckDemo/Views/FoodTruck/All.cshtml
@@ -15,7 +15,7 @@
         </div>
 
         <div class="col-md-3">
-          <a asp-controller="FoodTruck" asp-action="Edit" asp-route-foodTruckId="@truck.FoodTruckId" class="btn btn-info">edit</a>
+          <a asp-controller="FoodTruck" asp-action="Edit" asp-route-foodTruckId="@truck.FoodTruckId" class="btn btn-info">HIDE THIS IF NOT CREATOR edit</a>
           <a asp-controller="FoodTruck" asp-action="Details" asp-route-foodTruckId="@truck.FoodTruckId" class="btn btn-success">review</a>
         </div>
 
