--- a/week2/ForumDemo/Views/Shared/_Layout.cshtml
+++ b/week2/ForumDemo/Views/Shared/_Layout.cshtml
@@ -27,6 +27,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="New">New Posts</a>
                         </li>
+                        @if (@Context.Session.GetInt32("UserId") != null)
+                        {
+                            <li class="nav-item">
+                                <form asp-area="" asp-controller="Home" asp-action="Logout" method="POST">
+                                    <button class="btn btn-link">
+                                        Logout (@Context.Session.GetString("UserName"))
+                                    </button>
+                                </form>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
