--- a/week2/ForumDemo/Views/Home/AuthorPage.cshtml
+++ b/week2/ForumDemo/Views/Home/AuthorPage.cshtml
@@ -1,18 +1,16 @@
-@*
-  @model lowercase m to specify the data type of the view model
-  @Model capital m to access the data
-*@
-@model List<Post>
-
-@{
-  int? uid = @Context.Session.GetInt32("UserId");
-}
+@model User
 
 <div class="container">
-  <h2 class="text-center">All Posts</h2>
-  <hr>
+  <h2 class="text-center">
+    Welcome to @Model.FullName()'s Page
+  </h2>
 
-  @foreach (Post post in Model)
+  <p class="text-center">
+    Member since: @Model.CreatedAt | Total Posts: @Model.Posts.Count
+  </p>
+
+
+  @foreach (Post post in Model.Posts)
   {
     <div class="card shadow-sm rounded mx-auto w-50 mb-4">
       <h4 class="card-title text-center bg-dark text-light py-2">
@@ -29,10 +27,7 @@
           @post.Body
         </p>
       <small class="text-muted">
-        By: 
-        <a asp-controller="Home" asp-action="AuthorPage" asp-route-userId="@post.Author.UserId">
-          @post.Author.FullName()
-        </a> | On: @post.CreatedAt 
+        On: @post.CreatedAt 
       </small>
       </div>
 
