--- a/FoodTrucks/Views/Home/_Login.cshtml
+++ b/FoodTrucks/Views/Home/_Login.cshtml
@@ -10,7 +10,7 @@
       class="text-danger font-weight-bold"
       asp-validation-for="LoginEmail"
     ></span>
-    <input class="form-control" asp-for="LoginEmail" />
+    <input class="form-control" asp-for="LoginEmail" value="n@@m" />
   </div>
 
   <div class="form-group">
