--- a/FoodTrucks/Views/Shared/_Layout.cshtml
+++ b/FoodTrucks/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trucks" asp-action="Trucks">Dashboard</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trucks" asp-action="All">Dashboard</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Trucks" asp-action="New">Add Truck</a>
