--- a/FoodTrucks/Views/Trucks/All.cshtml
+++ b/FoodTrucks/Views/Trucks/All.cshtml
@@ -11,7 +11,15 @@
         </div>
 
         <div class="col-md-6">
-          <h3>@truck.Name</h3>
+          <h3>
+            <a
+              asp-controller="Trucks"
+              asp-action="Details"
+              asp-route-truckId="@truck.TruckId"
+            >
+              @truck.Name
+            </a>
+          </h3>
           <p>Style: @truck.Style</p>
           <p class="text-muted">
             Average rating: TBD
